# Wall-follower-turtlebot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
eval/: evaluation.py  range_errors.txt
launch/: turtlebot3_wall.launch  turtlebot3_wall_follower.launch  wall.launch
models/: bwall-round.stl  bwall-sharp.stl  bwall-stretch.stl  bwall-verbana.stl
rviz/: turtlebot3_gazebo_rviz.rviz
src/: evaluation.cpp  evaluation.h  wallFollower.cpp  wallFollower.h  wallFollower_no.cpp  wallFollower_no.h
worlds/: bwall-round.world  bwall-sharp.world  bwall-stretch.world  bwall.world
